--- a/src/card/card.css
+++ b/src/card/card.css
@@ -32,6 +32,10 @@ body {
     box-shadow: 0 8px 20px rgba(0,0,0,0.15);
 }
 
+.card-img{
+    height: 50vh;
+}
+
 footer {
     position: fixed;          /* fixed-bottom */
     bottom: 0;
