--- a/src/card/card.css
+++ b/src/card/card.css
@@ -60,3 +60,7 @@ footer {
     width: 100%;
     margin-inline: auto;           /* center the nav inside footer */
 }
+
+.card-prompt{
+    font-size: large;
+}
