--- a/src/social/social.css
+++ b/src/social/social.css
@@ -96,7 +96,7 @@ main{
     text-align: center;
 }
 
-.card-number {
+.post-number {
     display: block;
     font-size: 1rem;
     margin: 0 auto;
@@ -159,27 +159,6 @@ main{
     font-size: 1rem;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 70px;
-    background: #fafafa;
-    border-top: 1px solid #ddd;
-    z-index: 1000;
-}
-
-
-.footer-nav {
-    display: flex;   
-    flex-direction: row;
-    justify-content: space-around; 
-    align-items: center;       
-    margin: 0;                  
-    padding: 10px;               
-    list-style: none;            
-    max-width: 500px;
-    width: 100%;
-    margin-inline: auto; 
+.user-avatar{
+    width: 40px;
 }
