added the created cards to local storage and loaded them from the deck tab. added swiping feature

--- a/src/card/card.css
+++ b/src/card/card.css
@@ -57,6 +57,7 @@ body {
     background: rgb(255, 245, 245);
     border-radius: 12px;
     margin-bottom: 4px;
+    margin-top: 5px;
 }
 
 .form-card-description{
