--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,13 @@
     width: 220px;
 }
 
+.app-layout{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    margin: 0;
+}
+
 .login-footer{
     height: 28px;
     position: fixed;
@@ -10,13 +17,10 @@
 }
 
 .normal-header{
-    width: 300px;
+    height: 100px;
 }
 
 .normal-footer {
-    position: fixed;          /* fixed-bottom */
-    bottom: 0;
-    left: 0;
     width: 100%;
     height: 70px;             /* inline style you had */
     background: #fff;
