--- a/src/deck/deck.css
+++ b/src/deck/deck.css
@@ -1,15 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap');
 
-body{
-    background: #fafafa !important;
-    font-family: 'Nunito', Arial, sans-serif;
-    margin: 0;
-    padding-bottom: 70px;
-}
-
 main {
-    margin-left: 15px;
-    margin-right: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
 }
 
 
@@ -17,7 +12,6 @@ main {
     position: relative;
     width: 100%;
     max-width: 360px;
-    margin: 1rem auto;
     margin-top: 5vh;
     aspect-ratio: 3/4;
 
@@ -31,7 +25,6 @@ main {
     left: 0;
     right: 0;
     width: 80%;
-    height: 52vh;
     background: #fff;
     margin: 0 auto;
     border-radius: 16px;
@@ -151,8 +144,8 @@ main {
 .deck-buttons{
     display: flex;
     justify-content: center;
-    gap: 12px;
-    margin-top: 20px;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 .empty-deck-img{
@@ -165,4 +158,12 @@ main {
     font-size: 1.2rem;
     color: #555;
     margin-top: 20px;
+}
+
+.swipe-btn{
+    border-radius: 50%;
+    border: none;
+    width: 42px;
+    background: #f1f1f1;
+    cursor: pointer;
 }
