--- a/src/login/login.css
+++ b/src/login/login.css
@@ -8,12 +8,6 @@
   background-color: #c73434; /* Slightly lighter on hover */
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
 main{
     flex: 1
 }
@@ -23,5 +17,13 @@ footer{
 }
 
 .login-form{
-    max-width: 350px;
+    max-width: 325px;
+}
+
+.email-input{
+    width: 350px;
+}
+
+.remember-text{
+    margin-left: 5px;
 }
