--- a/src/card/card.css
+++ b/src/card/card.css
@@ -30,6 +30,7 @@ main {
     box-shadow: 0 12px 30px rgba(0,0,0,0.08);
     border-style: ridge;
     border-color: black;
+    transform-origin: center center;
 }
 
 .form-date-card::before{
@@ -61,6 +62,11 @@ main {
 
 .card-img{
     max-width: 34vh;
+}
+
+.form-date-card img {
+    border-radius: 8px;
+    margin-bottom: 4px;
 }
 
 .card-prompt{
