--- a/src/deck/deck.css
+++ b/src/deck/deck.css
@@ -24,6 +24,7 @@
     box-shadow: 0 12px 30px rgba(0,0,0,0.08);
     border-style: ridge;
     border-color: black;
+    border-width: 4px;
 
     opacity: 0;
     transition: all 0.35s ease;
